--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     </div><!-- /.container -->
     <footer>
         <ul>
-            <li><a href="mailto:emiralle@alumni.sfu.ca">email</a></li>
+            <li><a href="mailto:emilio_miralles@sfu.ca">email</a></li>
             <li><a href="https://github.com/je-miralles">github.com/je-miralles</a></li>
       </ul>
     </footer>
